# fake-news-backend

./: .gitignore  README.md  main.py  requirements.txt
factcheck_system/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
factcheck_system/app/: __init__.py  config.py  database.py  main.py
factcheck_system/app/api/: admin.py  analyze.py  feedback.py
factcheck_system/app/models/: __init__.py  admin_override.py  scam_knowledge_base.py  task.py  user_feedback.py
factcheck_system/app/services/: ai_service.py  audit_store.py  cache_service.py  crawler.py  pandas_store.py  task_store.py  vector_service.py
factcheck_system/app/workers/: __init__.py  pandas_task_processor.py  task_processor.py  task_queue.py  task_worker.py
factcheck_system/data/: tasks.parquet
factcheck_system/factcheck_system/: __init__.py  cli.py  crawler.py  services.py
factcheck_system/factcheck_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
factcheck_system/migrations/: env.py
factcheck_system/scripts/: clear_test_data.py  init_db.py  seed_db.py  test_ai_pipeline.py  test_without_api.py
factcheck_system/static/: swagger-custom.css
services/: ai_service.py  scraper_service.py
