[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factcheck-system"
version = "0.1.0"
description = "AI 驅動假訊息驗證系統（後端 + 爬蟲模組）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "anyio>=4.8.0,<5.0.0",
  "pandas==2.2.0",
  "pyarrow==15.0.0",
  "trafilatura==1.6.3",
  "beautifulsoup4==4.12.2",
  "requests==2.31.0",
  "playwright==1.40.0",
  "yt-dlp==2023.11.16",
  "google-genai>=0.2.0",
  "python-multipart==0.0.6",
  "python-dotenv==1.0.0",
  "Pillow==10.1.0",
  "aiohttp==3.9.1",
  "googlesearch-python>=1.2.0",
]

[project.scripts]
factcheck-system-api = "factcheck_system.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*", "factcheck_system*"]

